@@ -624,6 +624,7 @@ All (GUI):
 - Add wxAUI_TB_PLAIN_BACKGROUND wxAuiToolBar style (Allann Jones).
 - Make wxGenericDataViewCtrl::SetFont() really work (Laurent Poujoulat).
 - Remove wxLogWindow::OnFrameCreate(), it was never called anyhow.
+- Added wxDocument::Activate() (troelsk).
 
 wxGTK:
 
